--- a/report.Rmd
+++ b/report.Rmd
@@ -2,7 +2,7 @@
 title: "Report on Gun Murders"
 author: "Rafael Irizarry"
 date: "`r format(Sys.Date())`"
-output: html_document
+output: git_document
 ---
 
 ```{r setup, include=FALSE}
